--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "laravel-zero/laravel-zero",
-    "description": "The Laravel Zero Framework.",
+    "name": "adminetic/cli",
+    "description": "Command line interface for adminetic admin panel.",
     "keywords": ["framework", "laravel", "laravel zero", "console", "cli"],
-    "homepage": "https://laravel-zero.com",
+    "homepage": "https://github.com/pratiksh404/adminetic-cli",
     "type": "project",
     "license": "MIT",
     "support": {
-        "issues": "https://github.com/laravel-zero/laravel-zero/issues",
-        "source": "https://github.com/laravel-zero/laravel-zero"
+        "issues": "https://github.com/pratiksh404/adminetic-cli/issues",
+        "source": "https://github.com/pratiksh404/adminetic-cli"
     },
     "authors": [
         {
-            "name": "Nuno Maduro",
-            "email": "enunomaduro@gmail.com"
+            "name": "Pratik Shrestha",
+            "email": "pratikdai@gmail.com"
         }
     ],
     "require": {
